--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@google/generative-ai": "^0.24.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/axios": "^0.9.36",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "firebase": "^11.6.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
