--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^10.1.0",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
